--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -48,27 +48,28 @@
           <div class="modal-body">
             <form name="reserve" action="index.html" novalidate>
               <div class="formData">
-                <label for="first">Prénom</label><br />
-                <input class="text-control" type="text" id="first" name="first" minlength="2" /><br />
+                <label for="first">Prénom</label>
+                <input class="text-control" type="text" id="first" name="first" minlength="2" />
               </div>
               <div class="formData">
-                <label for="last">Nom</label><br />
-                <input class="text-control" type="text" id="last" name="last" /><br />
+                <label for="last">Nom</label>
+                <input class="text-control" type="text" id="last" name="last" />
               </div>
               <div class="formData">
-                <label for="email">E-mail</label><br />
-                <input class="text-control" type="email" id="email" name="email" /><br />
+                <label for="email">E-mail</label>
+                <input class="text-control" type="email" id="email" name="email" />
               </div>
               <div class="formData">
-                <label for="birthdate">Date de naissance</label><br />
-                <input class="text-control" type="date" id="birthdate" name="birthdate" /><br />
+                <label for="birthdate">Date de naissance</label>
+                <input class="text-control" type="date" id="birthdate" name="birthdate" />
               </div>
               <div class="formData">
-                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br />
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" />
               </div>
-              <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+
               <div class="formData">
+                <label>Quel tournoi souhaitez-vous participer cette année ?</label>
                 <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
                 <label class="checkbox-label" for="location1">
                   <span class="checkbox-icon"></span>
@@ -107,13 +108,11 @@
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
-                <br />
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
-                  Je Je souhaite être prévenu des prochains évènements.
+                  Je souhaite être prévenu des prochains évènements.
                 </label>
-                <br />
               </div>
               <input class="btn-submit" type="submit" value="C'est parti" />
             </form>
