Fixes OpenClassrooms-Student-Center/GameOn-website-FR#4: Add confirmation on successful submission

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -44,7 +44,7 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span class="close-icon"></span>
           <div class="modal-body">
             <form name="reserve" action="index.html" novalidate>
               <div class="formData">
@@ -65,7 +65,7 @@
               </div>
               <div class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" />
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="9999" />
               </div>
 
               <div class="formData">
